--- a/spring-boot-mongodb-master/src/main/resources/application.properties
+++ b/spring-boot-mongodb-master/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.data.mongodb.uri=mongodb+srv://sibin:Boat786#@cluster0-vgzxw.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://sibin:Boat786#@cluster0-vgzxw.mongodb.net/test?retryWrites=true
+spring.data.mongodb.database=test
 spring.data.mongodb.authentication-database=admin
 
 
