--- a/spring-boot-mongodb-master/src/main/resources/application.properties
+++ b/spring-boot-mongodb-master/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://sibin:Boat786#@cluster0-vgzxw.mongodb.net/test?ssl=true&authSource=admin&authMechanism=SCRAM-SHA-1
-spring.data.mongodb.database=test
+#spring.data.mongodb.uri=mongodb+srv://sibin:Boat786#@cluster0-vgzxw.mongodb.net/test?ssl=true&authSource=admin&authMechanism=SCRAM-SHA-1
+#spring.data.mongodb.database=test
